<resources>
    <string name="app_name">ChallangeChapter5</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="movieapp" translatable="false">MovieApp</string>
    <string name="movie">Movie</string>
    <string name="tv_show">Tv Show</string>
    <string name="entertainment_of_world">Entertainment of World.</string>
    <string name="movieapp_register">MovieApp REGISTER</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="my_profile">My Profile</string>
    <string name="age">Age</string>
    <string name="address">Address</string>
    <string name="update">UPDATE</string>
    <string name="logout">LOGOUT</string>
</resources>