<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.RegisterActivity"
    android:background="#06283D">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="cursive"
        android:text="@string/entertainment_of_world"
        android:textColor="#D58BDD"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/movieapp_register"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.193" />

    <EditText
        android:id="@+id/et_name"
        style="@style/input_button"
        android:backgroundTint="@color/white"
        android:background="@drawable/bot_nav_bg"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:hint="@string/name"
        android:inputType="text"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/et_username"
        style="@style/input_button"
        android:hint="@string/username"
        android:backgroundTint="@color/white"
        android:background="@drawable/bot_nav_bg"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:inputType="text"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.717"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_name" />

    <Button
        android:id="@+id/btn_login"
        style="@style/input_button"
        android:backgroundTint="@color/black"
        android:padding="10dp"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/btn_register"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_register"
        app:layout_constraintTop_toBottomOf="@+id/btn_register" />

    <EditText
        android:id="@+id/et_password"
        style="@style/input_button"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:background="@drawable/bot_nav_bg"
        android:textColorHint="@color/black"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_username" />

    <Button
        android:id="@+id/btn_register"
        style="@style/input_button"
        android:backgroundTint="@color/black"
        android:padding="10dp"
        android:textColor="@color/white"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="@+id/et_repeat_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_repeat_password"
        app:layout_constraintTop_toBottomOf="@+id/et_repeat_password" />

    <EditText
        android:id="@+id/et_repeat_password"
        style="@style/input_button"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        android:background="@drawable/bot_nav_bg"
        android:textColorHint="@color/black"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

</androidx.constraintlayout.widget.ConstraintLayout>