<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:id="@+id/menu_profile"
        android:layout_height="match_parent"
        android:background="#06283D">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/my_profile"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_profile"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/add_image"
            app:civ_border_color="#FFB200"
            app:civ_border_width="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <EditText
            android:id="@+id/et_username"
            style="@style/input_button"
            android:background="@drawable/bot_nav_bg"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/username"
            android:textColorHint="@color/black"
            android:inputType="text"
            android:padding="15dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_profile" />

        <EditText
            android:id="@+id/et_age"
            style="@style/input_button"
            android:backgroundTint="@color/white"
            android:background="@drawable/bot_nav_bg"
            android:textColor="@color/black"
            android:ems="10"
            android:hint="@string/age"
            android:textColorHint="@color/black"
            android:inputType="number"
            android:padding="15dp"
            app:layout_constraintEnd_toEndOf="@+id/et_username"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/et_username"
            app:layout_constraintTop_toBottomOf="@+id/et_username" />

        <EditText
            android:id="@+id/et_password"
            style="@style/input_button"
            android:backgroundTint="@color/white"
            android:background="@drawable/bot_nav_bg"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="text"
            android:padding="15dp"
            app:layout_constraintEnd_toEndOf="@+id/et_age"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/et_age"
            app:layout_constraintTop_toBottomOf="@+id/et_age" />

        <EditText
            android:id="@+id/et_address"
            style="@style/input_button"
            android:backgroundTint="@color/white"
            android:background="@drawable/bot_nav_bg"
            android:textColor="@color/black"
            android:ems="10"
            android:hint="@string/address"
            android:textColorHint="@color/black"
            android:inputType="text"
            android:padding="15dp"
            app:layout_constraintEnd_toEndOf="@+id/et_password"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/et_password"
            app:layout_constraintTop_toBottomOf="@+id/et_password" />

        <Button
            android:id="@+id/btn_update"
            style="@style/input_button"
            android:backgroundTint="@color/black"
            android:text="@string/update"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/et_address"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/et_address"
            app:layout_constraintTop_toBottomOf="@+id/et_address" />

        <Button
            android:id="@+id/btn_logout"
            style="@style/input_button"
            android:text="@string/logout"
            android:backgroundTint="@color/black"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/btn_update"
            app:layout_constraintStart_toStartOf="@+id/btn_update"
            app:layout_constraintTop_toBottomOf="@+id/btn_update" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>