<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgrounds"
    tools:context=".view.activity.LoginActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/entertainment_of_world"
        android:fontFamily="cursive"
        android:textColor="#D58BDD"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/et_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_username"
        style="@style/input_button"
        android:backgroundTint="@color/white"
        android:hint="@string/username"
        android:autofillHints="username"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:background="@drawable/bot_nav_bg"
        android:inputType="text"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/et_password"
        style="@style/input_button"
        android:background="@drawable/bot_nav_bg"
        android:hint="@string/password"
        android:textColor="@color/black"
        android:autofillHints="password"
        android:textColorHint="@color/black"
        android:backgroundTint="@color/white"
        android:inputType="textPassword"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="@+id/et_username"
        app:layout_constraintStart_toStartOf="@+id/et_username"
        app:layout_constraintTop_toBottomOf="@+id/et_username" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/movieapp"
        android:fontFamily="sans-serif-condensed-medium"
        android:textColor="@color/white"
        android:textSize="55sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.878" />

    <Button
        android:id="@+id/btn_login"
        style="@style/input_button"
        android:text="@string/login"
        android:textColor="@color/white"
        android:padding="10dp"
        android:backgroundTint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/et_password"
        app:layout_constraintStart_toStartOf="@+id/et_password"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <Button
        android:id="@+id/btn_register"
        style="@style/input_button"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:padding="10dp"
        android:backgroundTint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/btn_login"
        app:layout_constraintStart_toStartOf="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <ImageButton
        android:id="@+id/btn_indo"
        style="@style/localization_button"
        android:contentDescription="@string/sign_up"
        android:minHeight="48dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_usa"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/indonesia" />

    <ImageButton
        android:id="@+id/btn_usa"
        style="@style/localization_button"
        android:contentDescription="@string/login"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/usa" />

    <Button
        android:id="@+id/btn_login_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="48dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/bg_button"
        android:drawableLeft="@drawable/google_button"
        android:padding="10dp"
        android:text="Login with google"
        app:layout_constraintEnd_toEndOf="@+id/btn_login"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_register" />

</androidx.constraintlayout.widget.ConstraintLayout>